fix(select): add top aligned example, docs and fix icon rotation

--- a/src/patternfly/components/Select/select.scss
+++ b/src/patternfly/components/Select/select.scss
@@ -262,7 +262,7 @@
     margin-left: var(--pf-c-select__toggle-arrow--MarginLeft);
   }
 
-  .pf-m-top.pf-m-expanded > & {
+  .pf-c-select.pf-m-top.pf-m-expanded & {
     transform: var(--pf-c-select__toggle-arrow--m-top--m-expanded__toggle-arrow--Transform);
   }
 }
